# diabetes-checker-ai

./: README.md  diabities-model.ipynb  main.py  pyproject.toml
models/: diabetes_features.joblib  diabetes_labeler.joblib  diabetes_scaler.joblib  diabitics.keras
